--- a/index.html
+++ b/index.html
@@ -259,12 +259,13 @@
                   style="margin: 0px !important; padding: 15px"
                   class="sarkiDescription"
                 >
-                  A közvetlen közelünkben lévő vegyes üzlet egy kényelmes hely,
-                  ahol széles választékban megtalálhatjuk mindennapi
-                  szükségleteinket. Az üzletben friss élelmiszerek mellett
-                  tisztítószerek, valamint szépségápolási termékek és italok is
-                  rendelkezésünkre állnak.
+                  A közvetlen közelünkben elhelyezkedő vegyes üzlet egy ideális
+                  hely, ahol széles választékban találhatók meg mindennapi
+                  szükségleteink. Az üzlet kínálatában friss élelmiszereken túl
+                  tisztítószerek, szépségápolási termékek és italok is
+                  megtalálhatóak.
                 </p>
+
                 <div class="card-image">
                   <img src="img/cards/sarkimap.png" alt="" />
                 </div>
@@ -295,7 +296,7 @@
               >
                 Környékbeli ajánlott éttermek
               </h1>
-              <div
+              <!-- <div
                 class="card"
                 style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
               >
@@ -344,8 +345,11 @@
                     </div>
                   </div>
                 </a>
-              </div>
-              <!-- <div class="card" style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
+              </div> -->
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/basa.jpeg"
@@ -356,7 +360,10 @@
                 </div>
                 <div class="card-footer card-big-footer">
                   <h2>Basa Fogadó</h2>
-                  <p style="margin: 0px !important; padding-top: 10px">
+                  <p
+                    class="basa_desc"
+                    style="margin: 0px !important; padding-top: 10px"
+                  >
                     A Basa Fogadó elkötelezetten őrzi a székely hagyományokat.
                   </p>
                 </div>
@@ -376,7 +383,39 @@
                     </div>
                   </div>
                 </a>
-              </div> -->
+              </div>
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
+                <div class="card-image">
+                  <img
+                    src="img/cards/pisz.jpeg"
+                    alt=""
+                    class="card-big-footer-image"
+                    style="height: 230px !important"
+                  />
+                </div>
+                <div class="card-footer card-big-footer">
+                  <h2>Gyergyói pisztrángos</h2>
+                </div>
+                <a
+                  target="_blank"
+                  href="https://www.google.com/maps/dir/46.7012078,25.507957/Gyergy%C3%B3i+Pisztr%C3%A1ngos,+DN12C,+Gheorgheni/@46.7231229,25.5342467,13z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aeb5fd46e5dd3:0x4f0094296b5f3103!2m2!1d25.6469818!2d46.731888!3e0?entry=ttu"
+                  class="link external link-banner dark-theme-green link-chevron"
+                  style="margin-bottom: 0px !important"
+                >
+                  <i class="icon f7-icons">map_pin_ellipse</i>
+                  <div class="link-banner-text">
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
+                  </div>
+                </a>
+              </div>
               <h1 style="padding-top: 10px; text-align: center">Welness</h1>
               <div
                 class="card"
